feat: [BE] GPT api 기능 추가

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=server
+
+openai.model=gpt-4o-mini
+openai.api.key=""
+openai.api.url= https://api.openai.com/v1/chat/completions
