--- a/server/.gitignore
+++ b/server/.gitignore
@@ -35,3 +35,6 @@ out/
 
 ### VS Code ###
 .vscode/
+
+# Ignore application properties to keep sensitive data out of VCS
+src/main/resources/application.properties
