--- a/server/.gitignore
+++ b/server/.gitignore
@@ -39,4 +39,5 @@ out/
 # Ignore application properties to keep sensitive data out of VCS
 src/main/resources/application.properties
 
+# .env file
 .env
