fix:[BE] 로그인 수정 / h2 프로필 사진 추가

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=server
 # Kakao OAuth2
-spring.security.oauth2.client.registration.kakao.client-id=f2eeb4354042a23c6dfd889259ec7c31
+spring.security.oauth2.client.registration.kakao.client-id=5cb2482d29a48d493f987826193cd06e
 spring.security.oauth2.client.registration.kakao.client-secret=22mbMcKbPpytAWyVWeTYn7Jiq8GWr3uB
 spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/login/oauth2/code/kakao
-spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email,profile_image
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
 
 spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
-spring.secursity.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
 spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
 spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 
@@ -16,15 +16,13 @@ spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
 
-
 # Whitelabel
 server.error.whitelabel.enabled=false
 
-
-#gpt-4o-mini
+# gpt-4o-mini
 openai.model=gpt-4o-mini
 openai.api.key=""
-openai.api.url= https://api.openai.com/v1/chat/completions
+openai.api.url=https://api.openai.com/v1/chat/completions
 
 # H2 setting console
 spring.h2.console.enabled=true
@@ -37,5 +35,3 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
-
-
