--- a/server/.gitignore
+++ b/server/.gitignore
@@ -37,7 +37,8 @@ out/
 .vscode/
 
 # Ignore application properties to keep sensitive data out of VCS
-src/main/resources/application.properties
+server/src/main/resources/application.properties
 
 # .env file
 agentPersone/.env
+.env
