--- a/server/build.gradle
+++ b/server/build.gradle
@@ -33,7 +33,9 @@ dependencies {
 
 	// JPA & Database
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'com.h2database:h2'
+	implementation 'org.hibernate.orm:hibernate-community-dialects:6.2.11.Final'
+	implementation 'org.xerial:sqlite-jdbc:3.42.0.0' // SQLite JDBC 드라이버 추가
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	// Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
