--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -24,14 +24,11 @@ openai.model=gpt-4o-mini
 openai.api.key=""
 openai.api.url=https://api.openai.com/v1/chat/completions
 
-# H2 setting console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.web-allow-others=true
-
-# H2 setting database
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+# SQLite database setting
+spring.datasource.url=jdbc:sqlite:C:/2024-2-SCS4031-jjambbong-3/data/my_database.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.username=
 spring.datasource.password=
+spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDialect
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
