--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
     "recoil": "^0.7.7",
     "web-vitals": "^2.1.4"
   },
@@ -55,6 +56,7 @@
     "@storybook/react-webpack5": "^8.3.6",
     "@storybook/test": "^8.3.6",
     "eslint-plugin-storybook": "^0.10.1",
+    "prettier": "3.3.3",
     "prop-types": "^15.8.1",
     "storybook": "^8.3.6",
     "webpack": "^5.95.0"
