Update application.properties for ec2 link

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=server
 # Kakao OAuth2
 spring.security.oauth2.client.registration.kakao.client-id=5cb2482d29a48d493f987826193cd06e
 spring.security.oauth2.client.registration.kakao.client-secret=22mbMcKbPpytAWyVWeTYn7Jiq8GWr3uB
-spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.redirect-uri=http://ec2-43-203-239-48.ap-northeast-2.compute.amazonaws.com:8080/login/oauth2/code/kakao
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email,profile_image
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
