--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ server/src/main/resources/application.properties
 .env
 agentPersona/.env
 ../agentPersona/.env
+frontend/.env
 
 # H2 Database files
 *.mv.db
