--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -25,7 +25,7 @@ openai.api.key=""
 openai.api.url=https://api.openai.com/v1/chat/completions
 
 # MySQL RDS database settings
-spring.datasource.url=jdbc:mysql://tamtam-db.cj2y4auwm7gh.ap-northeast-2.rds.amazonaws.com/tamtamdb
+spring.datasource.url=jdbc:mysql://tamtam-db.cj2y4auwm7gh.ap-northeast-2.rds.amazonaws.com/tamtamdb3
 spring.datasource.username=admin
 spring.datasource.password=capstonetamtam9878
 
