[BE] feat : user 로그인 방법 수정

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -42,9 +42,10 @@ dependencies {
 
 	// Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-
-//	// Jakarta Servlet
-//	implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+	// json
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 파싱용
 
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
